Small style changes.
Few changes to the style in Cast. Have to look a bit more at it tomorrow

--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -13,12 +13,12 @@
     <body>
         <!-- The header for the logo, we could also put the nav inside the header eventually -->
         <!-- Also, the header is shared among pages -->
-        <header>
+        <header class="page-header">
 
             <!-- Logo can come here -->
 
             <figure class="logo-container">
-                <img class="logo-container__logo" src="images/logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
+                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;"/>
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -42,13 +42,14 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="content">
             <article>
-                <h1 class="title">Starring</h1>
+
+                <h1 class="title-cast">Starring</h1>
 
                 <section class="cast__element">
+                    <h3 class="cast__element__title">Matt Damon</h3>
                     <img src="images/matt_damon.jfif" alt="" class="cast__element__img">
-                    <h3>Matt Damon</h3>
                     <p class="cast__element__acting-career">
                         Matt Damon is an exceptional American actor who has graced the screens in numerous blockbuster hits. Interestingly, he began his career in the late 1980s with minor roles in both films and television shows. However, he gained widespread recognition for his breakout performance in "Good Will Hunting", which he co-wrote with his friend and fellow actor, Ben Affleck. The film was a commercial success, and Damon earned an Academy Award for Best Original Screenplay, along with a nomination for Best Actor.
                         Since then, Damon has gone on to star in several other critically acclaimed and commercially successful films such as the "Bourne" series, "Ocean's Eleven" trilogy, "The Martian," and "Ford v Ferrari." His performances have garnered multiple Academy Award nominations and other awards, including a Golden Globe and a Screen Actors Guild Award.
@@ -63,8 +64,8 @@
                 </section>
 
                 <section class="cast__element">
+                    <h3 class="cast__element__title">Jessica Chastain</h3>
                     <img src="images/jessica_chastain.jfif" alt="" class="cast__element__img">
-                    <h3>Jessica Chastain</h3>
                     <p class="cast__element__acting-career">
                         Jessica Chastain's movies was Born on March 24, 1977, in Sacramento, California, the American actress first appeared on TV in the mid-2000s with roles in "ER" and "Veronica Mars." But it was her role in "The Tree of Life" in 2011 that got her nominated for a Golden Globe for Best Supporting Actress.
                         From there, Chastain went on to play in films such as "Take Shelter" and "The Help," and ofcourse not to forget, her performances in "Zero Dark Thirty," "Interstellar," "A Most Violent Year," and "Molly's Game" were just amazing. Her role of Maya in "Zero Dark Thirty" got her a Golden Globe and an Oscar nomination for Best Actress.                      
@@ -77,8 +78,8 @@
                 </section>
 
                 <section class="cast__element">
+                    <h3 class="cast__element__title">Kristen Wiig</h3>
                     <img src="images/kristen_wiig.jfif" alt="" class="cast__element__img">
-                    <h3>Kristen Wiig</h3>
                     <p class="cast__element__acting-career">
                         Kristen Wiig is an actress and comedian. She was born on August 22, 1973, in Canandaigua, New York.
                         Wiig got her start in the comedy world as a member of the improvisation group: "The Groundlings" in Los Angeles. She later joined the cast of the sketch series "Saturday Night Live," where she became known for her weird  and funny characters and impressions. Her time on "Saturday Night Live" led to Wiig being recognized as an amazing comedian.
