Some more style adjustments.
Some more style adjustments.

--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -42,10 +42,10 @@
                 </ul>
             </nav>
         </header>
-        <main class="content">
+        <main class="content-cast">
             <article>
 
-                <h1 class="title-cast">Starring</h1>
+                <h1 class="title-cast">Meet the crew!</h1>
 
                 <section class="cast__element">
                     <h3 class="cast__element__title">Matt Damon</h3>
