--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -73,14 +73,17 @@
                 <section class="section">
                     <h2 class="section__title">Meet the crew!</h2>
                     <ul class="section__list-display">
-                        <li class="section__display-item">
-                            Matt Damon as Mark Watney
+                        <li class="section__display-images">
+                            <img src="images/matt_damon_FP.jpg" class="section__display-img">
+                            <figcaption class="section__display-text">Matt Damon as Mark Watney</figcaption>
                         </li>
-                        <li class="section__display-item">
-                            Jessica Chastain as Melissa Lewis
+                        <li class="section__display-images">
+                            <img src="images/jessica_chastain_FP.jpg" class="section__display-img">
+                            <figcaption class="section__display-text">Jessica Chastain as Melissa Lewis</figcaption>
                         </li>
-                        <li class="section__display-item">
-                            Kristen Wiig as Annie Montrose
+                        <li class="section__display-images">
+                            <img src="images/Kristin_Wiig_FP.jpg" class="section__display-img">
+                            <figcaption class="section__display-text">Kristen Wiig as Annie Montrose</figcaption>
                         </li>
                     </ul>
                 </section>
