--- a/Assignment1/summary.html
+++ b/Assignment1/summary.html
@@ -8,7 +8,6 @@
 
         <meta name="author" content="Mattijs Gietman, Niek Grimbergen and Sileman Patang">
 
-
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
@@ -44,47 +43,47 @@
             </nav>
         </header>
         <main>
-            <section> 
-            <h1> Synopsis</h1>
-            <p>
-                "The Martian" is a 2015 science fiction film directed by Ridley Scott and starring Matt Damon as Mark Watney, a NASA astronaut who is stranded on Mars after his crew believes he has died during an emergency evacuation.   
-                <br>
-                The story begins with the Ares III mission to Mars, led by Commander Melissa Lewis (Jessica Chastain), which is hit by a massive storm. During the evacuation, Watney is hit by debris and presumed dead. The rest of the crew, consisting of Rick Martinez (Michael Peña), Beth Johanssen (Kate Mara), Chris Beck (Sebastian Stan), and Alex Vogel (Aksel Hennie), leave the planet without him.
-                <br>
-                Watney wakes up to find himself alone on the planet with limited supplies, and he soon realizes that he has to figure out a way to survive until the next manned mission to Mars arrives in four years' time. He begins by using his knowledge as a botanist to grow food, but he quickly realizes that he needs to communicate with Earth in order to be rescued.
-                <br>
-                Meanwhile, at NASA, director Teddy Sanders (Jeff Daniels) is faced with the dilemma of whether to inform the Ares III crew that Watney is still alive, as doing so would mean risking the lives of the remaining crew members. Eventually, NASA decides to inform the crew and mount a rescue mission, but it will take a long time to reach Mars.
-                <br>
-                Watney continues to survive on Mars, overcoming numerous obstacles and challenges along the way. He manages to communicate with Earth using the Mars Pathfinder probe, and with the help of a team of scientists, engineers, and other experts, he works to find a way to stay alive until the rescue mission can reach him.
-                <br>
-                The movie culminates in a dramatic rescue mission, as the Ares IV crew, led by Lewis, return to Mars to retrieve Watney. The mission is fraught with danger, as the crew has to contend with unpredictable weather and technical malfunctions, but ultimately they are successful in retrieving Watney and returning him safely to Earth.
-                <br>
-                "The Martian" is a thrilling and inspiring story of one man's survival against all odds, and the determination of a team of scientists and astronauts to bring him home. It highlights the power of human ingenuity and cooperation in the face of seemingly insurmountable challenges.
+            <article>
+                <section class="summary-element"> 
+                    <h1 class="title-summary"> Synopsis </h1>
+                        <p class="cast__element__synopsis">
+                            "The Martian" is a 2015 science fiction film directed by Ridley Scott and starring Matt Damon as Mark Watney, a NASA astronaut who is stranded on Mars after his crew believes he has died during an emergency evacuation.   
+                            <br>
+                            The story begins with the Ares III mission to Mars, led by Commander Melissa Lewis (Jessica Chastain), which is hit by a massive storm. During the evacuation, Watney is hit by debris and presumed dead. The rest of the crew, consisting of Rick Martinez (Michael Peña), Beth Johanssen (Kate Mara), Chris Beck (Sebastian Stan), and Alex Vogel (Aksel Hennie), leave the planet without him.
+                            <br>
+                            Watney wakes up to find himself alone on the planet with limited supplies, and he soon realizes that he has to figure out a way to survive until the next manned mission to Mars arrives in four years' time. He begins by using his knowledge as a botanist to grow food, but he quickly realizes that he needs to communicate with Earth in order to be rescued.
+                            <br>
+                            Meanwhile, at NASA, director Teddy Sanders (Jeff Daniels) is faced with the dilemma of whether to inform the Ares III crew that Watney is still alive, as doing so would mean risking the lives of the remaining crew members. Eventually, NASA decides to inform the crew and mount a rescue mission, but it will take a long time to reach Mars.
+                            <br>
+                            Watney continues to survive on Mars, overcoming numerous obstacles and challenges along the way. He manages to communicate with Earth using the Mars Pathfinder probe, and with the help of a team of scientists, engineers, and other experts, he works to find a way to stay alive until the rescue mission can reach him.
+                            <br>
+                            The movie culminates in a dramatic rescue mission, as the Ares IV crew, led by Lewis, return to Mars to retrieve Watney. The mission is fraught with danger, as the crew has to contend with unpredictable weather and technical malfunctions, but ultimately they are successful in retrieving Watney and returning him safely to Earth.
+                            <br>
+                            "The Martian" is a thrilling and inspiring story of one man's survival against all odds, and the determination of a team of scientists and astronauts to bring him home. It highlights the power of human ingenuity and cooperation in the face of seemingly insurmountable challenges.
 
-            </p>
+                        </p>
 
-            <p> 
-                Produced through 20th Century Fox, the film is a coproduction of the United Kingdom and the United States. 
-                Producer Simon Kinberg began developing the film after Fox optioned the novel in March 2013, which Drew Goddard adapted into a screenplay and was initially attached to direct, but the film did not move forward. Scott replaced Goddard as director, and with Damon in place as the main character, production was approved. Filming began in November 2014 and lasted approximately seventy days. Twenty sets were built on one of the largest sound stages in the world in Budapest, Hungary. Wadi Rum in Jordan was also used for exterior filming.
-                <img src="TheMartian.jpg" alt="Cover of the movie The Martian"> 
-            </p>
-        </section>
+                        <p class="cast__element__synopsis"> 
+                        Produced through 20th Century Fox, the film is a coproduction of the United Kingdom and the United States. 
+                        Producer Simon Kinberg began developing the film after Fox optioned the novel in March 2013, which Drew Goddard adapted into a screenplay and was initially attached to direct, but the film did not move forward. Scott replaced Goddard as director, and with Damon in place as the main character, production was approved. Filming began in November 2014 and lasted approximately seventy days. Twenty sets were built on one of the largest sound stages in the world in Budapest, Hungary. Wadi Rum in Jordan was also used for exterior filming.
+                        <img src="images/TheMartian.jpg" alt="Cover of the movie The Martian"> 
+                    </p>
+                </section>
 
-        <section>
-            <h1> Plot </h1>
-            <p>
-            "The Martian" is a science fiction movie about an astronaut named Mark Watney (Matt Damon) who is left stranded on Mars after his crew members believe he has died during an emergency evacuation. Watney must use his skills and knowledge to survive on the harsh and inhospitable planet while attempting to make contact with Earth to arrange for a rescue mission. The story follows Watney as he faces numerous challenges and setbacks while trying to stay alive, and the efforts of his team on Earth and his former crew members to bring him back home safely. The film is a tale of human perseverance, resourcefulness, and cooperation in the face of extreme adversity.
-        </p>
-        <p> Watney awakens after the storm, injured and with a low-oxygen warning. 
-            He returns to the crew's surface habitat ("Hab") and treats his wound. 
-            As Watney recovers, he begins a video diary. Unable to communicate with Earth, his only chance of rescue is the next Mars mission. In four years, the Ares IV will land 3,200 kilometers (2,000 mi) away at the Schiaparelli crater. 
-            Watney's immediate concern is food; being a botanist, he creates a garden inside the Hab using Martian soil fertilized with the crew's bio-waste and manufactures water from leftover rocket fuel. He then cultivates potatoes using whole potatoes reserved for a special Thanksgiving meal. 
-            He also begins modifying the rover for the journey to the Ares IV MAV site. 
-            <img src="AresIII.jpg" alt="Ares III mission landing site (Acidalia Planitia region)"> 
-        </p>
-        </section>
-
-
+                <section class="plot-element">
+                    <h1 class="plot-title"> Plot </h1>
+                    <p class="plot__element__content">
+                    "The Martian" is a science fiction movie about an astronaut named Mark Watney (Matt Damon) who is left stranded on Mars after his crew members believe he has died during an emergency evacuation. Watney must use his skills and knowledge to survive on the harsh and inhospitable planet while attempting to make contact with Earth to arrange for a rescue mission. The story follows Watney as he faces numerous challenges and setbacks while trying to stay alive, and the efforts of his team on Earth and his former crew members to bring him back home safely. The film is a tale of human perseverance, resourcefulness, and cooperation in the face of extreme adversity.
+                </p>
+                <p class="plot__element__content"> Watney awakens after the storm, injured and with a low-oxygen warning. 
+                    He returns to the crew's surface habitat ("Hab") and treats his wound. 
+                    As Watney recovers, he begins a video diary. Unable to communicate with Earth, his only chance of rescue is the next Mars mission. In four years, the Ares IV will land 3,200 kilometers (2,000 mi) away at the Schiaparelli crater. 
+                    Watney's immediate concern is food; being a botanist, he creates a garden inside the Hab using Martian soil fertilized with the crew's bio-waste and manufactures water from leftover rocket fuel. He then cultivates potatoes using whole potatoes reserved for a special Thanksgiving meal. 
+                    He also begins modifying the rover for the journey to the Ares IV MAV site. 
+                    <img src="images/AresIII.jpg" alt="Ares III mission landing site (Acidalia Planitia region)"> 
+                </p>
+                </section>
+            </article>
         </main>
         <footer>
 
