--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -42,12 +42,12 @@
                 </ul>
             </nav>
         </header>
-        <main class="content-cast">
+        <main class="content content__cast">
             <article>
 
                 <h1 class="title-cast">Meet the crew!</h1>
 
-                <section class="cast__element">
+                <section class="section">
                     <h3 class="cast__element__title">Matt Damon</h3>
                     <img src="images/matt_damon.jfif" alt="" class="cast__element__img">
                     <p class="cast__element__acting-career">
@@ -63,7 +63,7 @@
                     </p>
                 </section>
 
-                <section class="cast__element">
+                <section class="section">
                     <h3 class="cast__element__title">Jessica Chastain</h3>
                     <img src="images/jessica_chastain.jfif" alt="" class="cast__element__img">
                     <p class="cast__element__acting-career">
@@ -77,7 +77,7 @@
                         adding depth and nuance to the character. Her chemistry with co-star Matt Damon is also a highlight of the film, as the two actors share a compelling and dynamic on-screen relationship.                    </p>
                 </section>
 
-                <section class="cast__element">
+                <section class="section">
                     <h3 class="cast__element__title">Kristen Wiig</h3>
                     <img src="images/kristen_wiig.jfif" alt="" class="cast__element__img">
                     <p class="cast__element__acting-career">
