More additions to CSS and content

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -74,15 +74,21 @@
                     <h2 class="section__title">Meet the crew!</h2>
                     <ul class="section__list-display">
                         <li class="section__display-images">
-                            <img src="images/matt_damon_FP.jpg" class="section__display-img"> 
+                            <a href="cast.html#matt_damon">
+                                <img src="images/matt_damon_FP.jpg" class="section__display-img"> 
+                            </a>
                             <figcaption class="section__display-text">Matt Damon as Mark Watney</figcaption>
                         </li>
                         <li class="section__display-images">
-                            <img src="images/jessica_chastain_FP.jpg" class="section__display-img">
+                            <a href="cast.html#jessica_chastain">
+                                <img src="images/jessica_chastain_FP.jpg" class="section__display-img">
+                            </a>
                             <figcaption class="section__display-text">Jessica Chastain as Melissa Lewis</figcaption>
                         </li>
                         <li class="section__display-images">
-                            <img src="images/Kristin_Wiig_FP.jpg" class="section__display-img">
+                            <a href="cast.html#kristin_wiig">
+                                <img src="images/Kristin_Wiig_FP.jpg" class="section__display-img">
+                            </a>
                             <figcaption class="section__display-text">Kristen Wiig as Annie Montrose</figcaption>
                         </li>
                     </ul>
@@ -93,15 +99,21 @@
                     <p class="section__paragraph"> <!-- modifier hier misschien-->
                         Experience The Martian today! Watch the movie now, or own it on DVD/Blue-ray. Click below to find out more!
                     </p>
-                    <button class="section__button">
-                        Prime Video
-                    </button>
-                    <button class="section__button">
-                        Youtube
-                    </button>
-                    <button class="section__button">
-                        Amazon
-                    </button>
+                    <a href="https://www.primevideo.com/detail/The-Martian/0M6MWW4RRVCA9P6DAIVEOX2WMO">
+                        <button class="section__button">
+                            Prime Video
+                        </button>
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=8GLnq6bqn10">
+                        <button class="section__button">
+                            Youtube
+                        </button>
+                    </a>
+                    <a href="https://www.amazon.nl/Martian-Extended-Matt-Damon/dp/B01HI87PKO/ref=sr_1_6?__mk_nl_NL=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=13DPY26IID6SS&keywords=the+martian&qid=1677081071&sprefix=the+martia%2Caps%2C199&sr=8-6">
+                        <button class="section__button">
+                            Amazon
+                        </button>
+                    </a>
                 </section>
 
 
@@ -168,17 +180,30 @@
 
                 <section class="section">
                     <h2 class="section__title">Movie Reviews</h2>
-                    <ul>
-                        <li class="movie-reviews__review">
-                            The Guardian: "Ridley Scott returns to form with this gripping and visually stunning space adventure that gives Matt Damon one of his best ever roles" (Peter Bradshaw).
-                        </li>
-                            The New York Times: "For anyone who misses the gee-whiz exuberance of space travel, The Martian is the ticket" (A.O. Scott).
-                        <li class="movie-reviews__review">
-                        </li>
-                        <li class="movie-reviews__review">
-                            Rolling Stone: "The Martian is a real-live, grade-A, genuinely thrilling adventure, featuring one of the most memorable and purely enjoyable performances in Matt Damon's career" (Peter Travers)
-                        </li>
-                    </ul>
+                    <figure class="section__block-quote">           
+                        <blockquote cite="https://www.theguardian.com/film/2015/oct/04/the-martian-review-matt-damon-shines-stranded-astronaut" class="section__quote">
+                            Ridley Scott returns to form with this gripping and visually stunning space adventure that gives Matt Damon one of his best ever roles
+                        </blockquote>
+                        <figcaption class="section__quote-name">
+                            Peter Bradshaw, The Guardian
+                        </figcaption>
+                    </figure>
+                    <figure class="section__block-quote">
+                        <blockquote cite="https://www.nytimes.com/2015/10/02/movies/review-in-the-martian-marooned-but-not-alone.html" class="section__quote">
+                            For anyone who misses the gee-whiz exuberance of space travel, The Martian is the ticket.
+                        </blockquote>
+                        <figcaption class="section__quote-name">
+                            A.O. Scott, The New York Times
+                        </figcaption>
+                    </figure>
+                    <figure class="section__block-quote">
+                        <blockquote cite="https://www.rollingstone.com/tv-movies/tv-movie-reviews/the-martian-122671/" class="section__quote">
+                            The Martian is a real-live, grade-A, genuinely thrilling adventure, featuring one of the most memorable and purely enjoyable performances in Matt Damon's career
+                        </blockquote>
+                        <figcaption class="section__quote-name">
+                            Peter Travers, Rolling Stone
+                        </figcaption>
+                    </figure>
                 </section>
 
                 <section class="section movie-links">
