--- a/Assignment1/cast.html
+++ b/Assignment1/cast.html
@@ -48,7 +48,7 @@
                 <h1 class="title-cast">Meet the crew!</h1>
 
                 <section class="section">
-                    <h3 class="cast__element__title">Matt Damon</h3>
+                    <h3 class="cast__element__title" id="matt_damon">Matt Damon</h3>
                     <img src="images/matt_damon.jfif" alt="" class="cast__element__img">
                     <p class="cast__element__acting-career">
                         Matt Damon is an exceptional American actor who has graced the screens in numerous blockbuster hits. Interestingly, he began his career in the late 1980s with minor roles in both films and television shows. However, he gained widespread recognition for his breakout performance in "Good Will Hunting", which he co-wrote with his friend and fellow actor, Ben Affleck. The film was a commercial success, and Damon earned an Academy Award for Best Original Screenplay, along with a nomination for Best Actor.
@@ -64,7 +64,7 @@
                 </section>
 
                 <section class="section">
-                    <h3 class="cast__element__title">Jessica Chastain</h3>
+                    <h3 class="cast__element__title" id="jessica_chastain">Jessica Chastain</h3>
                     <img src="images/jessica_chastain.jfif" alt="" class="cast__element__img">
                     <p class="cast__element__acting-career">
                         Jessica Chastain's movies was Born on March 24, 1977, in Sacramento, California, the American actress first appeared on TV in the mid-2000s with roles in "ER" and "Veronica Mars." But it was her role in "The Tree of Life" in 2011 that got her nominated for a Golden Globe for Best Supporting Actress.
@@ -78,7 +78,7 @@
                 </section>
 
                 <section class="section">
-                    <h3 class="cast__element__title">Kristen Wiig</h3>
+                    <h3 class="cast__element__title" id="kristen_wiig">Kristen Wiig</h3>
                     <img src="images/kristen_wiig.jfif" alt="" class="cast__element__img">
                     <p class="cast__element__acting-career">
                         Kristen Wiig is an actress and comedian. She was born on August 22, 1973, in Canandaigua, New York.
