Link Images bottom page
added images for the links at the bottom of the home page

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -209,11 +209,13 @@
                 <section class="section movie-links">
                     <h2 class="section__title">Stay Connected</h2>
                     <p class="subtitle">Follow 'The Martian' on Social Media and Visit the Official Website:</p>
-                    <a class="movie-links__link" href="https://www.foxmovies.com/movies/the-martian">Official website</a>
-                    <a class="movie-links__link" href="https://twitter.com/MartianMovie">Twitter</a>
-                    <a class="movie-links__link" href="https://www.facebook.com/MartianMovie/">Facebook</a>
-                    <a class="movie-links__link" href="https://www.instagram.com/martianmovie/">Instagram</a>
-                    <a class="movie-links__link" href="https://www.youtube.com/user/foxmovies">YouTube</a>
+                    <div class="movie-links__block">
+                        <a class="movie-links__link" href="https://www.foxmovies.com/movies/the-martian"><img src="images/www_icon.svg" class="movie-links__img"></a>
+                        <a class="movie-links__link" href="https://twitter.com/MartianMovie"><img src="images/tw_icon.svg" class="movie-links__img"></a>
+                        <a class="movie-links__link" href="https://www.facebook.com/MartianMovie/"><img src="images/fb_icon.svg" class="movie-links__img"></a>
+                        <a class="movie-links__link" href="https://www.instagram.com/martianmovie/"><img src="images/in_icon.svg" class="movie-links__img"></a>
+                        <a class="movie-links__link" href="https://www.youtube.com/user/foxmovies"><img src="images/yt_icon.svg" class="movie-links__img"></a>
+                    </div>
                 </section>
 
 
