New buttons + styling
Added new buttons and did some styling.

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -86,7 +86,7 @@
                             <figcaption class="section__display-text">Jessica Chastain as Melissa Lewis</figcaption>
                         </li>
                         <li class="section__display-images">
-                            <a href="cast.html#kristin_wiig">
+                            <a href="cast.html#kristen_wiig">
                                 <img src="images/Kristin_Wiig_FP.jpg" class="section__display-img">
                             </a>
                             <figcaption class="section__display-text">Kristen Wiig as Annie Montrose</figcaption>
@@ -99,21 +99,23 @@
                     <p class="section__paragraph"> <!-- modifier hier misschien-->
                         Experience The Martian today! Watch the movie now, or own it on DVD/Blue-ray. Click below to find out more!
                     </p>
-                    <a href="https://www.primevideo.com/detail/The-Martian/0M6MWW4RRVCA9P6DAIVEOX2WMO">
-                        <button class="section__button">
-                            Prime Video
-                        </button>
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=8GLnq6bqn10">
-                        <button class="section__button">
-                            Youtube
-                        </button>
-                    </a>
-                    <a href="https://www.amazon.nl/Martian-Extended-Matt-Damon/dp/B01HI87PKO/ref=sr_1_6?__mk_nl_NL=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=13DPY26IID6SS&keywords=the+martian&qid=1677081071&sprefix=the+martia%2Caps%2C199&sr=8-6">
-                        <button class="section__button">
-                            Amazon
-                        </button>
-                    </a>
+                    <div class="section__block-block">
+                        <a href="https://www.primevideo.com/detail/The-Martian/0M6MWW4RRVCA9P6DAIVEOX2WMO">
+                            <button class="section__button">
+                                Prime
+                            </button>
+                        </a>
+                        <a href="https://www.youtube.com/watch?v=8GLnq6bqn10">
+                            <button class="section__button">
+                                Youtube
+                            </button>
+                        </a>
+                        <a href="https://www.amazon.nl/Martian-Extended-Matt-Damon/dp/B01HI87PKO/ref=sr_1_6?__mk_nl_NL=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=13DPY26IID6SS&keywords=the+martian&qid=1677081071&sprefix=the+martia%2Caps%2C199&sr=8-6">
+                            <button class="section__button">
+                                Amazon
+                            </button>
+                        </a>
+                    </div>
                 </section>
 
 
