added comment where refactorings were done

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -73,6 +73,7 @@
                     </p>
                 </section>
 
+                <!-- refactorings done -->
                 <section class="section cast">
                     <h2 class="section__title">Meet the crew!</h2>
                     <ul class="cast__list">
